fixed overflow issue with larger side numbers

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@
 .square {
     width: 13vh;
     height: 13vh;
-    border: 2px solid gray;
+    outline: 1px solid gray;
+    outline-offset: -1px;
     background-color: black;
     box-sizing: border-box;
     opacity: 0;
